--- a/web/templates/web/registration_form.html
+++ b/web/templates/web/registration_form.html
@@ -7,7 +7,7 @@
 <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button>Submit</button>
+    <button>Submit.</button>
 </form>
 {% endif %}
 {% endblock %}
