--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -1,10 +1,23 @@
 {% extends "web/base.html" %}
 {% block content %}
 {% if user.is_authenticated %}
-<p>Вы авторизованы как <b>{{ user.username|escape }}</b></p>
+<p>Wellcum, de'la'<b>{{ user.username|escape }}</b>!</p>
 {% endif %}
-<p><i>Coming soon...</i></p>
-{{ year }}
+<p><i>You may be interested in...</i></p>
+<ul>
+    {% for note in notes %}
+    <li>
+        <h3>{{ note.title }}</h3>
+        <p>
+            {% if note.text|length <= 50 %}
+            {{ note.text|linebreaksbr }}
+            {% else %}
+            {{ note.text|truncatechars:50|linebreaksbr }}
+            {% endif %}
+        </p>
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
 
 
