--- a/web/templates/web/note_add_form.html
+++ b/web/templates/web/note_add_form.html
@@ -1,9 +1,9 @@
 {% extends 'web/base.html' %}
 {% block content %}
-<h2>Le' Authentication Form.</h2>
+<h2>La' Note Creation</h2>
 <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button>Submit.</button>
+    <button>Create.</button>
 </form>
 {% endblock %}
