+ beta note view

--- a/web/templates/web/note_add_form.html
+++ b/web/templates/web/note_add_form.html
@@ -1,9 +1,13 @@
 {% extends 'web/base.html' %}
 {% block content %}
-    <h2>La' Note Creation</h2>
+    {% if edit %}
+        <h2>La' Note Edition</h2>
+    {% else %}
+        <h2>La' Note Creation</h2>
+    {% endif %}
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button>Create.</button>
+        <button>Submit.</button>
     </form>
 {% endblock %}
