--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -7,7 +7,11 @@
     <ul>
         {% for note in notes %}
             <li>
-                <h3><a href="{% url 'note_view' note.id %}">{{ note.title }}</a></h3>
+                {% if user.is_authenticated %}
+                    <h3><a href="{% url 'note_edit' note.id %}">{{ note.title }}</a></h3>
+                {% else %}
+                    <h3><a href="{% url 'note_view' note.id %}">{{ note.title }}</a></h3>
+                {% endif %}
                 <p>
                     {% if note.text|length <= 50 %}
                         {{ note.text|linebreaksbr }}
