--- a/web/templates/web/note_view_form.html
+++ b/web/templates/web/note_view_form.html
@@ -7,5 +7,11 @@
         <div style="max-height: 80vh; overflow-y: auto; word-wrap: break-word; white-space: pre-wrap;">
             <p>{{ note.text }}</p>
         </div>
+
+        {% if note.user.id == viewer_id %}
+            <a href="{% url 'note_edit' note.id %}">
+                <button type="button" class="btn btn-primary">Edit.</button>
+            </a>
+        {% endif %}
     </form>
 {% endblock %}
