--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -3,11 +3,11 @@
     {% if user.is_authenticated %}
         <h2>Wellcum, de'la'<b>{{ user.username|escape }}</b>!</h2>
     {% endif %}
-    <p><i>You may be interested in...</i></p>
+    <h3><i>You may be interested in...</i></h3>
     <ul>
         {% for note in notes %}
             <li>
-                <h3><a href="{% url 'note_view' note.id %}">{{ note.title }}</a></h3>
+                <h4><a href="{% url 'note_view' note.id %}">{{ note.title }}</a></h4>
                 <p>
                     {% if note.text|length <= 50 %}
                         {{ note.text|linebreaksbr }}
